# Portuguese-Legal-Assistant

./: .gitignore  README.md  cassandra_docker.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml
ai/assistant/: response.py
ai/scraper/: run_scraper.py  scraper.py
ai_assistant/: ai_response.py  chatbot.py  connect_cassandra_session.py  connect_database.py  fetch_articles.py  rag_pipeline.py
ai_development/ai_assistant/: note.py
ai_development/scraper/: extractor.py
algorithm/: chatbot.py
algorithm/ai/: cassandra_vectorstore.py  database.py
app/Backend/: manage.py  pyproject.toml
app/Backend/plaws_website/: asgi.py  settings.py  urls.py  wsgi.py
backend/: README.md  db.sqlite3  manage.py  server.py
backend/assistant/: cassandra_vectorstore.py  database.py  intent_detector.py  note.py  rag_pipeline.py  response.py
backend/core/: settings.py
backend/plawsai_app/: apps.py  models.py  views.py
backend/plawsai_site/: asgi.py  settings.py  urls.py  wsgi.py
backend/ptlaws_api/: apps.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/ptlaws_site/: asgi.py  settings.py  urls.py  wsgi.py
backend/scraper/: extractor.py  run_scraper.py  scraper.py  session.py
backend/users/: backends.py  models.py  serializers.py  tests.py  urls.py  views.py
chatbot-ui/: package-lock.json  package.json
frontend/: index.html  package-lock.json  package.json  pnpm-lock.yaml  postcss.config.cjs  tailwind.config.js
scraper/: cassandra_session.py  create_cassandra_session.py  run_scraper.py  scraper.py  storage.py
(+41 files in other folders)
