[tool.poetry]
name = "chatbot_project"
version = "0.1.0"
description = ""
authors = ["Diogo Rodrigues <diogo.gorodrigues@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest-playwright = "^0.5.1"
cassandra-driver = "^3.29.1"
playwright = "^1.45.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
langchain = {extras = ["all"], version = "^0.2.5"}
jsonpatch = "^1.33"
jsonpointer = "^2.4"
langchain-astradb = "*"
langchain-core = "*"
langchain-openai = "*"
langchain-text-splitters = "*"
langchainhub = "*"
langsmith = "*"
numpy = "*"
openai = "*"
python-dotenv = "*"
requests = "*"
nltk = "*"
tenacity = "*"
langchain-experimental = "^0.0.61"
astrapy = "^1.2.1"
bson = "^0.5.10"
transformers = "^4.41.2"
langchain-huggingface = "^0.0.3"
text-generation = "^0.7.0"
cassio = "^0.1.8"
langchain-community = "^0.2.11"
pyinstall = "*"
flask = "^3.1.0"
django = "^5.1.6"
rank-bm25 = "^0.2.2"

[tool.poetry.scripts]
scraper = "scraper.run_scraper:main"
chat = "chatbot_project.ai.chatbot:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"