[tool.poetry]
name = "django-web-framework"
version = "0.1.0"
description = ""
authors = ["Diogo Rodrigues <diogo.gorodrigues@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
